# hf-mcp-summarize

./: .gitignore  Dockerfile  LICENSE  README.md  Release-note.md  docker-compose.yaml  pyproject.toml
src/: main.py
src/summarizers/: text_summarizer.py
tests/: test_main.py  test_server.py  test_utils.py
